--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -80,8 +80,7 @@ jobs:
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
         cd openwrt
         sudo wget https://raw.githubusercontent.com/coolsnowwolf/lede/8f7e660d4dd97bc9c9f6913e469c1b8417110445/feeds.conf.default -O feeds.conf.default
-        ./scripts/feeds update -a
-        ./scripts/feeds install -a -f
+        ./scripts/feeds update -a && ./scripts/feeds install -a -f
         cd ..
         wget https://github.com/coolsnowwolf/lede/archive/111e93f75dee275531d5ab06d398a772ca3ddf21.zip -O ledess.zip
         unzip ledess.zip
@@ -98,10 +97,7 @@ jobs:
         sudo cp -r mosdns-v5/v2dat/ openwrt/package/lean/v2dat
         sudo git clone -b dev --single-branch --filter=blob:none https://github.com/vernesong/OpenClash OpenClash
         sudo cp -r OpenClash/luci-app-openclash/ openwrt/package/lean/luci-app-openclash
-        sudo rm -rf pack
-        sudo rm -rf mosdns-lua
-        sudo rm -rf mosdns-v5
-        sudo rm -rf OpenClash
+        sudo rm -rf pack mosdns-lua mosdns-v5 OpenClash
         cd openwrt
         sudo sed -i 's/KERNEL_PATCHVER:=6.6/KERNEL_PATCHVER:=6.12/g' target/linux/x86/Makefile
         sudo sed -i "s/https:\/\/github.com\/Loyalsoldier\/v2ray-rules-dat\/releases\/latest\/download/http:\/\/10.0.0.10\/meta\/geo/g" package/lean/luci-app-mosdns/root/usr/share/mosdns/mosdns.sh
@@ -126,21 +122,8 @@ jobs:
         sudo git clone -b lede https://github.com/pymumu/luci-app-smartdns.git package/lean/luci-app-smartdns
         sudo git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git package/lean/luci-theme-argon
         sudo git clone -b 18.06 https://github.com/jerrykuku/luci-app-argon-config.git package/lean/luci-app-argon-config
-        sudo rm -rf feeds/packages/net/v2ray-geodata
-        sudo rm -rf feeds/packages/net/mosdns
-        sudo rm -rf feeds/packages/net/smartdns
-        sudo rm -rf feeds/packages/net/v2dat
-        sudo rm -rf feeds/luci/themes/luci-theme-argon-mod
-        sudo rm -rf feeds/luci/themes/luci-theme-argon
-        sudo rm -rf feeds/luci/applications/luci-app-argon-config
-        sudo rm -rf feeds/luci/applications/luci-app-smartdns
-        sudo rm -rf feeds/luci/applications/luci-app-mosdns
-        sudo rm -rf feeds/luci/applications/luci-app-openclash
-        ./scripts/feeds update -a
-        ./scripts/feeds install -a -f
-        ls feeds/luci/themes
-        ls feeds/luci/applications
-        ls package/lean
+        sudo rm -rf feeds/packages/net/v2ray-geodata feeds/packages/net/mosdns feeds/packages/net/smartdns feeds/packages/net/v2dat feeds/luci/themes/luci-theme-argon-mod feeds/luci/themes/luci-theme-argon feeds/luci/applications/luci-app-argon-config feeds/luci/applications/luci-app-smartdns feeds/luci/applications/luci-app-mosdns feeds/luci/applications/luci-app-openclash
+        ./scripts/feeds update -a && ./scripts/feeds install -a -f
     - name: Load custom configuration
       run: |
         [ -e files ] && sudo mv files openwrt/files
