--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -157,7 +157,7 @@ jobs:
         sudo sed -i 's/192.168.1.1/192.168.50.1/g' package/base-files/Makefile
         sudo sed -i 's/$1$V4UetPzk$CYXluq4wUazHjmCDBCqXF.:0:0:99999:7:::/$1$eK1Ot.KS$t3PuFw0Az1qM6Plz2Ki9P0:19541:0:99999:7:::/g' package/lean/default-settings/files/zzz-default-settings
         sudo sed -i '/customized in this file/a net.netfilter.nf_conntrack_max=6553500' package/base-files/files/etc/sysctl.conf
-        sudo -e "net.ipv6.conf.all.accept_ra = 2\nnet.ipv6.conf.all.use_tempaddr = 2\nnet.ipv6.conf.default.use_tempaddr = 2\nnet.ipv6.conf.default.addr_gen_mode = 3\nnet.ipv6.conf.all.addr_gen_mode = 3" | tee -a package/base-files/files/etc/sysctl.conf
+        echo -e "net.ipv6.conf.all.accept_ra = 2\nnet.ipv6.conf.all.use_tempaddr = 2\nnet.ipv6.conf.default.use_tempaddr = 2\nnet.ipv6.conf.default.addr_gen_mode = 3\nnet.ipv6.conf.all.addr_gen_mode = 3" | sudo tee -a package/base-files/files/etc/sysctl.conf
         sudo git clone https://github.com/sbwml/v2ray-geodata.git package/lean/v2ray-geodata
         sudo git clone https://github.com/1345695/openwrt-smartdns.git package/lean/smartdns
         sudo git clone -b lede https://github.com/pymumu/luci-app-smartdns.git package/lean/luci-app-smartdns
